cluster/apps/media/sonarr/app/ingress-api.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-api
  namespace: media

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.{SECRET_DEV_DOMAIN}`) && Header(`apikey`, `fortestingonly`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: sonarr.{SECRET_DEV_DOMAIN}
